[project]
name = "Livenodes-Common-Ports"
dynamic = ['version']
description = "LiveNodes: node based live streaming sensor/data and visualization suite."
authors = [
    { name = "Yale Hartmann", email = "yale.hartmann@uni-bremen.de" }
]
# TODO: figure out how/if to add livenodes here... for now install manually in venv via:
# pip install . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
# pip install -e . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
dependencies = [
    "livenodes>=0.12.1b1",
    "numpy>=1.24.4"
]

[project.optional-dependencies]
dev = [
    "tox",
    "pytest>=8.2.2"
]

[build-system]
requires = [
    "setuptools>=60.0.0",
    "wheel",
    "setuptools_scm >= 8.0.0",
    "setuptools-git-versioning"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 140
target-version = ['py38']
skip-string-normalization = true
